<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.edu_v.cmsi.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:text="@string/login_txtUsuario"
            style="@style/nomeDosCampos" />
        <EditText
            android:id="@+id/login_edtUsuario"
            style="@style/nomeDosCampos" />

        <TextView
            android:text="@string/login_txtSenha"
            style="@style/nomeDosCampos" />
        <EditText
            android:id="@+id/login_edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        <CheckBox
            android:id="@+id/login_ckbConectato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_ckbConectado"/>
        <Button
            android:id="@+id/login_btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btnEntrar"
            android:onClick="logar"/>

    </LinearLayout>

</ScrollView>
